--- a/people.html
+++ b/people.html
@@ -27,6 +27,7 @@
 									<li><a class="icon solid fa-home" href="index.html"><span>Home</span></a></li>
 									<li><a class="icon fa-chart-bar" href="people.html" ><span>People</span></a>
 										<ul>											
+											<li><a href="index.html#PI">PI</a></li>
 											<li><a href="people.html#Team">Current Members</a></li>
 											<li><a href="people.html#Alumni">Alumni</a></li>
 											<li><a href="people.html#Collaborator">Collaborators</a></li>
