--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
 									<li><a class="icon solid fa-home" href="index.html"><span>Home</span></a></li>
 									<li><a class="icon fa-chart-bar" href="people.html" ><span>People</span></a>
 										<ul>
-											<li><a href="people.html">Current Members</a></li>
-											<li><a href="people.html">Alumni</a></li>
-											<li><a href="people.html">Collaborators</a></li>
+											<li><a href="index.html#PI">PI</a></li>
+											<li><a href="people.html#Team">Current Members</a></li>
+											<li><a href="people.html#Alumni">Alumni</a></li>
+											<li><a href="people.html#Collaborator">Collaborators</a></li>
 										</ul>
 									</li>
 									<li><a class="icon solid fa-cog" href="news.html"><span>News</span></a></li>
@@ -100,7 +101,7 @@
 				<section id="banner">
 					<div class="container">
 						<p>Get to know our PI: <br>
-						<strong><U>Dr. Gongyu Li</U></strong> </p>
+						<strong><a name="PI"><font color='White'>Dr. Gongyu Li</font></a></strong> </p>
 					</div>
 				</section>
 
