--- a/publication.html
+++ b/publication.html
@@ -27,9 +27,10 @@
 									<li><a class="icon solid fa-home" href="index.html"><span>Home</span></a></li>
 									<li><a class="icon fa-chart-bar" href="people.html" ><span>People</span></a>
 										<ul>
-											<li><a href="people.html">Current Members</a></li>
-											<li><a href="people.html">Alumni</a></li>
-											<li><a href="people.html">Collaborators</a></li>
+											<li><a href="index.html#PI">PI</a></li>
+											<li><a href="people.html#Team">Current Members</a></li>
+											<li><a href="people.html#Alumni">Alumni</a></li>
+											<li><a href="people.html#Collaborator">Collaborators</a></li>
 										</ul>
 									</li>
 									<li><a class="icon solid fa-cog" href="news.html"><span>News</span></a></li>
