--- a/people.html
+++ b/people.html
@@ -56,7 +56,7 @@
 									<section>
 										<a class="image featured"><img src="images/Li_Gongyu_02_web_PS.jpg" alt="" /></a>
 										<header>
-											<h3>PI: Dr. Gongyu Li</h3>
+											<h3>PI: <a href="index.html#PI">Dr. Gongyu Li</a></h3>
 										</header>
 										<p><strong>AP</strong>: 2021.02 - now, Nankai University <br>
 										<strong>Postdoc</strong>: 2017.08 - 2021.01, UW-Madison <br>
