--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 																<span class="date">LimsLab简介</span>
 															</header>
 															<p>为解决传统蛋白质质谱技术在蛋白质相互作用信息、细胞异质性信息以及细胞动态变化信息等
-															多方面的不足，LimsLab提出<strong>新型结构质谱</strong>的概念，将整合原位蛋白质质谱、离子迁移结构质谱和靶向蛋白质
+															多方面的不足，LimsLab提出<strong><font color='blue'><u>新型结构质谱</u></font></strong>的概念，将整合原位蛋白质质谱、离子迁移结构质谱和靶向蛋白质
 															组学的优势，开发出一整套针对蛋白结构及蛋白修饰构效关系的超快质谱分析方法，长期目标为实现<strong>单个活细胞蛋白质结构</strong>的快速质谱分析。LimsLab课题组在蛋白质
 															质谱方向上有近十年的研究经验，包括质谱基础理论研究、新型快速原位灵敏的质谱分析方法开发以及在
 															阿尔茨海默症相关蛋白结构研究中的应用研究。LimsLab将以为人类疾病的发病机制和早期诊疗提供蛋白质
