--- a/research.html
+++ b/research.html
@@ -51,7 +51,7 @@
 							<!-- Post -->
 								<article class="box post">
 									<header>
-										<h2><strong>"More Native" Structural Mass Spectrometry:</strong> </h2>
+										<h2><strong><a name="SMS">"More Native" Structural Mass Spectrometry</a>:</strong> </h2>
 										<h2><strong><font color='red'>Rapid</font> + <font color='green'>Lossless</font> + <font color='blue'>High-resolution</font> +++ </strong> </h2>
 									</header>
 									<span class="image featured"><img src="images/limslab_projects_full.jpg" alt="" /></span>
