--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
 															阿尔茨海默症相关蛋白结构研究中的应用研究。LimsLab将以为人类疾病的发病机制和早期诊疗提供蛋白质
 															分子机制水平上的新视角新策略为核心任务，技术上重点解决蛋白质结构质谱分析时存在的技术难题，
 															科学上重点关注低丰度蛋白质翻译后修饰如氨基酸手性突变和唾液酸化等对蛋白结构和功能的影响。
-															具体方向包括：（1）超快结构质谱一步检测活细胞内蛋白结构及其相互作用（原位蛋白鉴定）；（2）无损
-															结构质谱方法学开发及其用于蛋白修饰构效关系研究（结构无损分析）；（3）新型高分辨结构质谱用于
+															具体方向包括：（1）<font color='light blue'>超快结构质谱</font>一步检测活细胞内蛋白结构及其相互作用（原位蛋白鉴定）；（2）<font color='light blue'>无损结构质谱</font>方法学开发及其
+															用于蛋白修饰构效关系研究（结构无损分析）；（3）新型<font color='light blue'>高分辨结构质谱</font>用于
 															人类疾病关键蛋白的手性拆分（功能应用研究）。</p>
 														</article>
 								
