--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 											<h3>Ultrafast SMS+</h3>
 										</header>
 										<p> <strong>Ultrafast SMS</strong> is aimed to rapidly track protein 3D structural and 
-										conformational changes arising from biological stimulus, as fast as <a href="https://www.nature.com/articles/s41467-019-12548-0"><strong>nanosecond</strong></a>. </p>
+										conformational changes arising from biological stimulus, as fast as <a href="https://www.nature.com/articles/s41467-019-12548-0"><strong><font color='red'>nanosecond</font></strong></a>. </p>
 									</section>
 
 							</div>
