--- a/people.html
+++ b/people.html
@@ -234,7 +234,7 @@
 									<section>
 										<a class="image featured"><img src="images/guangming_huang_2017.jpg" alt="" /></a>
 										<header>
-											<h3>USTC: Prof. Dr. Guangming Huang</h3>
+											<h3>USTC: Prof. Dr. <a href="http://en.scms.ustc.edu.cn/2012/1011/c13455a89279/page.htm">Guangming Huang</a></h3>
 										</header>
 										<p><strong>Specialist</strong>: Single-cell Mass Spectrometry</p>
 									</section>
@@ -246,7 +246,7 @@
 									<section>
 										<a class="image featured"><img src="images/lingjun_li.jpg" alt="" /></a>
 										<header>
-											<h3>UW-Madison: Prof. Dr. Lingjun Li</h3>
+											<h3>UW-Madison: Prof. Dr. <a href="https://lilabs.org">Lingjun Li</a></h3>
 										</header>
 										<p><strong>Specialist</strong>: Quantitative Neuropeptidomics</p>
 									</section>
@@ -258,7 +258,7 @@
 									<section>
 										<a class="image featured"><img src="images/brandon_ruotolo.jpg" alt="" /></a>
 										<header>
-											<h3>UM: Prof. Dr. Brandon Ruotolo</h3>
+											<h3>UM: Prof. Dr. <a href="https://sites.lsa.umich.edu/ruotolo/">Brandon Ruotolo</a></h3>
 										</header>
 										<p><strong>Specialist</strong>: Gas-phase Protein Structure</p>
 									</section>
