--- a/publication.html
+++ b/publication.html
@@ -105,8 +105,7 @@
 									<p><strong>17</strong>. Yuting Chen‡, <strong>Gongyu Li‡</strong>, Siming Yuan, Yang Pan, Yangzhong Liu and Guangming Huang*. 
 									<a href="https://pubs.acs.org/doi/abs/10.1021/acs.analchem.9b00716">Ultrafast Micro-Electrophoresis: 
 									Behind Direct Mass Spectrometry Measurement for Proteins and Metabolites in Living Cell/Cells.
-									</a><strong><i>Anal. Chem.  </i></strong> 2019, 91, 10441-10447. (‡, co-first author) <br>
-									[<i><strong><font color='red'>Ultrafast MS: Further Mechanism</font></strong></i>.]</p>
+									</a><strong><i>Anal. Chem.  </i></strong> 2019, 91, 10441-10447. (‡, co-first author) </p>
 									
 									<p><strong>16</strong>. Shihui Zheng, Siming Yuan, Zhuanghao Hou,<strong>Gongyu Li</strong>, Yuting Chen, Yang Pan, Yangzhong Liu and Guangming Huang*. 
 									<a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/rcm.8493">Charge-dependent modulation of specific and 
@@ -121,7 +120,8 @@
 									<p><strong>14</strong>. <strong>Gongyu Li‡</strong>, Shihui Zheng‡, Yuting Chen, Zhuanghao Hou and Guangming Huang*. 
 									<a href="https://pubs.acs.org/doi/10.1021/acs.analchem.8b00859">Reliable Tracking In-solution 
 									Protein Unfolding via Ultrafast Thermal Unfolding/Ion Mobility-Mass Spectrometry.
-									</a><strong><i>Anal. Chem. </i></strong> 2018, 90, 7997-8001. (‡, co-first author) </p>
+									</a><strong><i>Anal. Chem. </i></strong> 2018, 90, 7997-8001. (‡, co-first author) <br>
+									[<i><strong><font color='red'>Rapid SMS: Online IM-MS of ms Solution Unfolding </font></strong></i>.]</p>
 									
 									<p><strong>13</strong>. <strong>Gongyu Li‡</strong>, Siming Yuan‡, Shihui Zheng, Yangzhong Liu* and Guangming Huang*. 
 									<a href="https://pubs.acs.org/doi/10.1021/acs.analchem.7b05055">In-situ Living Cell 
