--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				<section id="features">
 					<div class="container">
 						<header>
-							<h2>Welcome to <strong><font color='green'><U>Tech Show</U></font></strong> @ <strong><font color='red'>L</font><font color='blue'>ims</font><font color='red'>Lab</font></strong>!</h2>
+							<h2>Welcome to <strong><font color='green'><U>Tech Show</U></font></strong> @ <strong><font style='color: #d6665e;'>L</font><font color='blue'>ims</font><font style='color: #d6665e;'>Lab</font></strong>!</h2>
 						</header>
 						<div class="row aln-center">
 							<div class="col-4 col-6-medium col-12-small">
