--- a/people.html
+++ b/people.html
@@ -142,7 +142,7 @@
 				<section id="features">
 					<div class="container">
 						<header>
-							<h2>Welcome to <strong><font color='green'><U><a name="Alumni">Alumni Page</a></U></font></strong> @ <strong><font color='red'>L</font><font color='blue'>ims</font><font color='red'>Lab</font></strong>!</h2>
+							<h2>Welcome to <strong><font color='green'><U><a href="people.html#Alumni" name="Alumni">Alumni Page</a></U></font></strong> @ <strong><font color='red'>L</font><font color='blue'>ims</font><font color='red'>Lab</font></strong>!</h2>
 						</header>
 						<div class="row aln-center">
 							<div class="col-4 col-6-medium col-12-small">
