--- a/research.html
+++ b/research.html
@@ -51,10 +51,10 @@
 							<!-- Post -->
 								<article class="box post">
 									<header>
-										<h2><strong><a name="SMS">"More Native" Structural Mass Spectrometry</a>:</strong> </h2>
-										<h2><strong><font color='red'>Rapid</font> + <font color='green'>Lossless</font> + <font color='blue'>High-resolution</font> +++ </strong> </h2>
+										<h2 class='major-header'><strong><a name="SMS" >"More Native" Structural Mass Spectrometry</a>:</strong> </h2>
+										<h2 class='major-header'><strong><font color='red'>Rapid</font> + <font color='green'>Lossless</font> + <font color='blue'>High-resolution</font> +++ </strong> </h2>
 									</header>
-									<span class="image featured"><img src="images/limslab_projects_full.jpg" alt="" /></span>
+									<span class="image featured"><img src="images/limslab_projects_full.jpg" alt=""/></span>
 									<h3><U><strong><font color='red'>Rapid: Nanosecond Photochemical Structure Probing</font></strong></U></h3>
 									<p>Dr. Li has the long-standing research interest focusing on the development 
 									and application of <strong>ultrafast</strong> separation techniques capable of in situ purification 
