--- a/research.html
+++ b/research.html
@@ -2,6 +2,16 @@
 <!--
 	LimsLab @ NKU
 -->
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?637167ccc21fbb404ed76bb140e218c0";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+
 <html>
 	<head>
 		<title>LimsLab @ NKU</title>
