--- a/gallery.html
+++ b/gallery.html
@@ -58,6 +58,9 @@
 			<!-- Main -->
 				<section id="main">
 					<div class="container">
+						<header>
+							<h2 class='major-header'>Welcome to <strong><font color='green'>Gallery Page</font></strong> @ <strong><font style='color: #d6665e;'>L</font><font color='blue'>ims</font><font style='color: #d6665e;'>Lab</font></strong>!</h2>
+						</header>
 						<div id="content">
 
 							<!-- Post -->
@@ -77,6 +80,11 @@
 								</article>
 
 						</div>
+					</div>
+					<div class='major-header' class="col-12">
+						<ul class="actions">
+							<li><a href="index.html" class="button icon solid fa-file"> Get Me Back Home </a></li>
+						</ul>
 					</div>
 				</section>
 
