--- a/people.html
+++ b/people.html
@@ -59,7 +59,7 @@
 				<section id="features">
 					<div class="container">
 						<header>
-							<h2>Welcome to <strong><font color='green'><U><a name="Team">Team Page</a></U></font></strong> @ <strong><font color='red'>L</font><font color='blue'>ims</font><font color='red'>Lab</font></strong>!</h2>
+							<h2>Welcome to <strong><font color='green'><a name="Team"></a>Team Page</font></strong> @ <strong><font style='color: #d6665e;'>L</font><font color='blue'>ims</font><font style='color: #d6665e;'>Lab</font></strong>!</h2>
 						</header>
 						<div class="row aln-center">
 							<div class="col-4 col-6-medium col-12-small">
@@ -154,7 +154,7 @@
 				<section id="features">
 					<div class="container">
 						<header>
-							<h2>Welcome to <strong><font color='green'><U><a href="people.html#Alumni" name="Alumni">Alumni Page</a></U></font></strong> @ <strong><font color='red'>L</font><font color='blue'>ims</font><font color='red'>Lab</font></strong>!</h2>
+							<h2>Welcome to <strong><font color='green'><a name="Alumni"></a>Alumni Page</font></strong> @ <strong><font style='color: #d6665e;'>L</font><font color='blue'>ims</font><font style='color: #d6665e;'>Lab</font></strong>!</h2>
 						</header>
 						<div class="row aln-center">
 							<div class="col-4 col-6-medium col-12-small">
@@ -237,7 +237,7 @@
 				<section id="features">
 					<div class="container">
 						<header>
-							<h2>Welcome to <strong><font color='green'><U><a name="Collaborator">Collaborator Page</a></U></font></strong> @ <strong><font color='red'>L</font><font color='blue'>ims</font><font color='red'>Lab</font></strong>!</h2>
+							<h2>Welcome to <strong><font color='green'><a name="Collaborator"></a>Collaborator Page</font></strong> @ <strong><font style='color: #d6665e;'>L</font><font color='blue'>ims</font><font style='color: #d6665e;'>Lab</font></strong>!</h2>
 						</header>
 						<div class="row aln-center">
 							<div class="col-4 col-6-medium col-12-small">
@@ -277,6 +277,11 @@
 														
 							</div>
 						</div>
+					</div>
+					<div class='major-header' class="col-12">
+						<ul class="actions">
+							<li><a href="index.html" class="button icon solid fa-file"> Get Me Back Home </a></li>
+						</ul>
 					</div>
 				</section>
 			
