--- a/news.html
+++ b/news.html
@@ -57,7 +57,7 @@
 				<section id="main">
 					<div class="container">
 					    <header>
-							<h2>Welcome to <strong><font color='green'><U>NEWS Page</U></font></strong> @ <strong><font color='red'>L</font><font color='blue'>ims</font><font color='red'>Lab</font></strong>!</h2>
+							<h2 class='major-header'>Welcome to <strong><font color='green'>NEWS Page</font></strong> @ <strong><font style='color: #d6665e;'>L</font><font color='blue'>ims</font><font style='color: #d6665e;'>Lab</font></strong>!</h2>
 						</header>
 						<div class="row">
 							<!-- Sidebar -->
@@ -191,6 +191,11 @@
 								</div>
 
 						</div>
+					</div>
+					<div class='major-header' class="col-12">
+						<ul class="actions">
+							<li><a href="index.html" class="button icon solid fa-file"> Get Me Back Home </a></li>
+						</ul>
 					</div>
 				</section>
 
