--- a/publication.html
+++ b/publication.html
@@ -63,7 +63,7 @@
 							<!-- Post -->
 								<article class="box post">
 									<header>
-										<h2>Welcome to <strong><font color='green'><U>PUB Page</U></font></strong> @ <strong><font color='red'>L</font><font color='blue'>ims</font><font color='red'>Lab</font></strong>!</h2>
+										<h2 class='major-header'>Welcome to <strong><font color='green'>PUB Page</font></strong> @ <strong><font style='color: #d6665e;'>L</font><font color='blue'>ims</font><font style='color: #d6665e;'>Lab</font></strong>!</h2>
 									</header>									
 									<h3><strong><U><font color='blue'>At Nankai University</font></U>:</strong></h3>
 									<h3><strong>2021</strong></h3>
@@ -204,6 +204,11 @@
 								</article>
 
 						</div>
+					</div>
+					<div class='major-header' class="col-12">
+						<ul class="actions">
+							<li><a href="index.html" class="button icon solid fa-file"> Get Me Back Home </a></li>
+						</ul>
 					</div>
 				</section>
 
