--- a/research.html
+++ b/research.html
@@ -63,7 +63,7 @@
 							<!-- Post -->
 								<article class="box post">
 									<header>
-										<h2 class='major-header'><strong><a name="SMS" >"More Native" Structural Mass Spectrometry</a>:</strong> </h2>
+										<h2 class='major-header'><strong><a name="SMS" ></a>"More Native" Structural Mass Spectrometry:</strong> </h2>
 										<h2 class='major-header'><strong><font color='red'>Rapid</font> + <font color='green'>Lossless</font> + <font color='blue'>High-resolution</font> +++ </strong> </h2>
 										
 									</header>
