--- a/people.html
+++ b/people.html
@@ -29,7 +29,7 @@
 					<div class="container">
 
 						<!-- Logo -->
-							<h1 id="logo"><a href="index.html">L<font color='blue'>ims</font>Lab <font color='black'>@ NKU</font></a></h1>
+							<h1 id="logo"><a href="index.html"><font color='blue'>L</font><font color='#9900ff'>ims</font><font color='black'>Lab @ NKU</font></a></h1>
 							<p><font color='black'><strong>Native Structural Mass Spectrometry</strong></font></p>
 							<font color='light gray'>Towards Living Single-cell Protein Structures</font>
 
@@ -59,7 +59,7 @@
 				<section id="features">
 					<div class="container">
 						<header>
-							<h2>Welcome to <strong><font color='green'><a name="Team"></a>Team Page</font></strong> @ <strong><font style='color: #d6665e;'>L</font><font color='blue'>ims</font><font style='color: #d6665e;'>Lab</font></strong>!</h2>
+							<h2>Welcome to <strong><font color='green'><a name="Team"></a>Team Page</font></strong> @ <strong><font color='blue'>L</font><font color='#9900ff'>ims</font><font color='black'>Lab</font></strong>!</h2>
 						</header>
 						<div class="row aln-center">
 							<div class="col-4 col-6-medium col-12-small">
@@ -154,7 +154,7 @@
 				<section id="features">
 					<div class="container">
 						<header>
-							<h2>Welcome to <strong><font color='green'><a name="Alumni"></a>Alumni Page</font></strong> @ <strong><font style='color: #d6665e;'>L</font><font color='blue'>ims</font><font style='color: #d6665e;'>Lab</font></strong>!</h2>
+							<h2>Welcome to <strong><font color='green'><a name="Alumni"></a>Alumni Page</font></strong> @ <strong><font color='blue'>L</font><font color='#9900ff'>ims</font><font color='black'>Lab</font></strong>!</h2>
 						</header>
 						<div class="row aln-center">
 							<div class="col-4 col-6-medium col-12-small">
@@ -237,7 +237,7 @@
 				<section id="features">
 					<div class="container">
 						<header>
-							<h2>Welcome to <strong><font color='green'><a name="Collaborator"></a>Collaborator Page</font></strong> @ <strong><font style='color: #d6665e;'>L</font><font color='blue'>ims</font><font style='color: #d6665e;'>Lab</font></strong>!</h2>
+							<h2>Welcome to <strong><font color='green'><a name="Collaborator"></a>Collaborator Page</font></strong> @ <strong><font color='blue'>L</font><font color='#9900ff'>ims</font><font color='black'>Lab</font></strong>!</h2>
 						</header>
 						<div class="row aln-center">
 							<div class="col-4 col-6-medium col-12-small">
