--- a/publication.html
+++ b/publication.html
@@ -29,7 +29,7 @@
 					<div class="container">
 
 						<!-- Logo -->
-							<h1 id="logo"><a href="index.html">L<font color='blue'>ims</font>Lab <font color='black'>@ NKU</font></a></h1>
+							<h1 id="logo"><a href="index.html"><font color='blue'>L</font><font color='#9900ff'>ims</font><font color='black'>Lab @ NKU</font></a></h1>
 							<p><font color='black'><strong>Native Structural Mass Spectrometry</strong></font></p>
 							<font color='light gray'>Towards Living Single-cell Protein Structures</font>
 							
@@ -63,7 +63,7 @@
 							<!-- Post -->
 								<article class="box post">
 									<header>
-										<h2 class='major-header'>Welcome to <strong><font color='green'>PUB Page</font></strong> @ <strong><font style='color: #d6665e;'>L</font><font color='blue'>ims</font><font style='color: #d6665e;'>Lab</font></strong>!</h2>
+										<h2 class='major-header'>Welcome to <strong><font color='green'>PUB Page</font></strong> @ <strong><font color='blue'>L</font><font color='#9900ff'>ims</font><font color='black'>Lab</font></strong>!</h2>
 									</header>									
 									<h3><strong><U><font color='blue'>At Nankai University</font></U>:</strong></h3>
 									<h3><strong>2021</strong></h3>
