--- a/research.html
+++ b/research.html
@@ -29,7 +29,7 @@
 					<div class="container">
 
 						<!-- Logo -->
-							<h1 id="logo"><a href="index.html">L<font color='blue'>ims</font>Lab <font color='black'>@ NKU</font></a></h1>
+							<h1 id="logo"><a href="index.html"><font color='blue'>L</font><font color='#9900ff'>ims</font><font color='black'>Lab @ NKU</font></a></h1>
 							<p><font color='black'><strong>Native Structural Mass Spectrometry</strong></font></p>
 							<font color='light gray'>Towards Living Single-cell Protein Structures</font>
 
