--- a/publication.html
+++ b/publication.html
@@ -70,10 +70,10 @@
 									<p>Gongyu Li et al. 2021 in press<br>									
 									Gongyu Li et al. 2021 in press</p>									
 									<h3><strong><U><font color='blue'>Prior to Nankai University</font></U>:</strong></h3>
-									<p><strong>25</strong>. Gongyu Li, Ashley Phetsanthad, Min Ma, Qinying Yu, Ashita Nair, Zhen Zheng, Kellen DeLaney, Fengfei Ma, 
+									<p><strong>25</strong>. <strong>Gongyu Li*</strong>, Ashley Phetsanthad, Min Ma, Qinying Yu, Ashita Nair, Zhen Zheng, Kellen DeLaney, Fengfei Ma, 
 									Seungpyo Hong, Lingjun Li*.	<a href="https://doi.org/10.26434/chemrxiv.13379957.v1">Sialylation Fine-Tunes Glycoprotein 
 									Structural Microheterogeneity Associated with Alzheimer’s Disease as Captured by Native Ion Mobility-Mass Spectrometry.
-									</a> <strong><i>ChemRxiv</i></strong> Preprint. https://doi.org/10.26434/chemrxiv.13379957.v1 </p>
+									</a> <strong><i>ChemRxiv</i></strong> Preprint. https://doi.org/10.26434/chemrxiv.13379957.v1 (*, co-corresponding) </p> 
 									
 									<p><strong>24</strong>. Hua Zhang, Xudong Shi, Nhu Q. Vu, <strong>Gongyu Li</strong>, Zihui Li, 
 									Yatao Shi, Miyang Li, Bin Wang, Nathan V. Welham, Manish S. Patankar, and Lingjun Li*. 
