--- a/publication.html
+++ b/publication.html
@@ -73,7 +73,8 @@
 									<p><strong>25</strong>. <strong>Gongyu Li*</strong>, Ashley Phetsanthad, Min Ma, Qinying Yu, Ashita Nair, Zhen Zheng, Kellen DeLaney, Fengfei Ma, 
 									Seungpyo Hong, Lingjun Li*.	<a href="https://doi.org/10.26434/chemrxiv.13379957.v1">Sialylation Fine-Tunes Glycoprotein 
 									Structural Microheterogeneity Associated with Alzheimer’s Disease as Captured by Native Ion Mobility-Mass Spectrometry.
-									</a> <strong><i>ChemRxiv</i></strong> Preprint. https://doi.org/10.26434/chemrxiv.13379957.v1 (*, co-corresponding) </p> 
+									</a> <strong><i>ChemRxiv</i></strong> Preprint. https://doi.org/10.26434/chemrxiv.13379957.v1 (<strong>*, co-corresponding</strong>)</br> 
+									[<i><strong><font color='red'>Lossless SMS: AIU/AIF IM-MS</font></strong></i>.]</p> 
 									
 									<p><strong>24</strong>. Hua Zhang, Xudong Shi, Nhu Q. Vu, <strong>Gongyu Li</strong>, Zihui Li, 
 									Yatao Shi, Miyang Li, Bin Wang, Nathan V. Welham, Manish S. Patankar, and Lingjun Li*. 
