--- a/index.html
+++ b/index.html
@@ -214,12 +214,13 @@
 															<header>
 																<span class="date">Professional Preparations</span>																
 															</header>
-															<p><U><strong>Dr. Gongyu Li</strong></U> obtained his Ph.D. degree in Analytical Chemistry under the supervision of Dr. 
-															Guangming Huang at University of Science and Technology of China (USTC) in June 2017. His research career
+															<p><U><strong>Dr. Gongyu Li</strong></U> obtained his Ph.D. degree in Analytical Chemistry under the supervision of Prof. Dr. 
+															Guangming Huang at University of Science and Technology of China (USTC) in June 2017. Dr. Li conducted his postdoc research 
+															at University of Wisconsin-Madison under the supervision of Prof. Dr. Lingjun Li from August 2017 to January 2021. His research career
 															started at Jiangxi Normal University (JXNU), where he received his B.S. in Chemistry in 2012.
 															In 2016 and 2019, he visited Dr. Brandon T. Ruotolo’s lab at University of Michigan as a visiting graduate
 															student and visiting scholar, respectively, where he started and extended his ion mobility spectrometry research.
-															After these professional preparations, he joined the College of Chemistry at Nankai University in 2021 as 
+															After these professional preparations, he joined the College of Chemistry at Nankai University in Feburary 2021 as 
 															a tenure-tracking Assistant Professor, where he was also one of the members of "Hundred Youth Academic 
 															Leader" of Nankai University.</p>
 														</article>
