--- a/research.html
+++ b/research.html
@@ -69,6 +69,8 @@
 									</header>
 					
 									<a class='image centered'> <img src="images/limslab_projects_full.jpg" alt="" style="width:60%;"/></a>
+									<strong>Develeopment of advanced mass spectrometric methods/techniques (ambient ion source, 
+									ion mobility-mass spectrometry and protein tagging chemistry) for sweeting in situ protein identification and structural analysis.</strong>
 									<h3><U><strong><font color='red'>Rapid: Nanosecond Photochemical Structure Probing</font></strong></U></h3>
 									<p>Dr. Li has the long-standing research interest focusing on the development 
 									and application of <strong>ultrafast</strong> separation techniques capable of in situ purification 
