--- a/publication.html
+++ b/publication.html
@@ -261,7 +261,7 @@
 													(000) 000-0000
 												</li>
 												<li class="icon solid fa-envelope">
-													<a href="mailto:ligongyu1@126.com?subject=limslab-contact">ligongyu1@126.com</a>
+													<a href="mailto:gongyu.lims@gmail.com?subject=limslab-contact">gongyu.lims@gmail.com</a>
 												</li>
 											</ul>
 										</div>
