--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 																<span class="date">导师简介</span>
 															</header>
 															<p><strong>李功玉</strong>，男，南开大学化学学院特聘研究员，博士生导师。2017年06月博士毕业于中国科学技术大学分析化学专业，
-															获理学博士学位，指导老师为国家杰青、中组部青千、单细胞质谱专家黄光明教授。2017年08月至2021年1月在美国威斯康星大学
+															获理学博士学位，指导老师为单细胞质谱专家黄光明教授。2017年08月至2021年1月在美国威斯康星大学
 															麦迪逊分校进行博士后研究，合作导师为药学院Lingjun Li（李灵军）教授（质谱顶级期刊JASMS副主编、全球50大杰出女性科学
 															家之一）。李博士曾分别于2016年和2019年两次前往美国密歇根大学进行交流学习，合作导师为结构质谱专家、密歇根大学终身
 															教授Brandon Ruotolo。2012年6月，本科毕业于江西师范大学，获学士学位。2021年2月，加入南开大学化学学院，分析科学研究中心。
