--- a/people.html
+++ b/people.html
@@ -82,11 +82,11 @@
 									<section>
 										<a class="image featured"><img src="images/nankai-logo.jpg" alt="" /></a>
 										<header>
-											<h3>LIMS001: xxx</h3>
+											<h3>LIMS001: Yu Xu</h3>
 										</header>
 										<p><strong>PhD Student</strong>: 2021.09 - now, Nankai University<br> 
-										<strong>MS</strong>: 2017.08 - 2021.06, UW-Madison<br>
-										<strong>BS</strong>: 2012.09 - 2017.06, USTC </p>
+										<strong>MS</strong>: 2017.09 - 2020.07, SUN YAT-SEN UNIVERSITY<br>
+										<strong>BS</strong>: 2013.09 - 2017.07, Yulin Normal University </p>
 									</section>
 
 							</div>
@@ -94,13 +94,13 @@
 
 								<!-- Feature -->
 									<section>
-										<a class="image featured"><img src="images/nankai-logo.jpg" alt="" /></a>
+										<a class="image featured"><img src="images/Xia2021July.jpg" alt="" /></a>
 										<header>
-											<h3>LIMS002: xxx</h3>
+											<h3>LIMS002: Xia Xu</h3>
 										</header>
 										<p><strong>PhD Student</strong>: 2021.09 - now, Nankai University<br>
-										<strong>MS</strong>: 2017.08 - 2021.06, UW-Madison<br>
-										<strong>BS</strong>: 2012.09 - 2017.06, USTC </p>
+										<strong>MS</strong>: 2018.09 - 2021.07, Beijing Univ. C. Med.<br>
+										<strong>BS</strong>: 201409 - 201806, Shandong Univ. Tra. C. Med.</p>
 									</section>
 
 							</div>
@@ -108,13 +108,12 @@
 
 								<!-- Feature -->
 									<section>
-										<a class="image featured"><img src="images/nankai-logo.jpg" alt="" /></a>
+										<a class="image featured"><img src="images/Rui2021July.jpg" alt="" /></a>
 										<header>
-											<h3>LIMS003: xxx</h3>
+											<h3>LIMS003: Rui Zhao</h3>
 										</header>
-										<p><strong>PhD Student</strong>: 2021.09 - now, Nankai University <br> 
-										<strong>MS</strong>: 2017.08 - 2021.06, UW-Madison <br>
-										<strong>BS</strong>: 2012.09 - 2017.06, USTC </p>
+										<p><strong>MS Student</strong>: 2021.09 - now, Nankai University<br> 
+										<strong>BS</strong>: 2017.09 - 2021.06, Yantai University</p>
 									</section>
 									
 							</div>
