--- a/gallery.html
+++ b/gallery.html
@@ -74,9 +74,9 @@
 									</header>
 									<span class="image featured"><img src="images/pic04.jpg" alt="" /></span>
 									<header>
-										<h2> <strong>LimsLab @ Spring 2021</strong> </h2> 
+										<h2> <strong>LimsLab @ Summer 2021</strong> </h2> 
 									</header>
-									<span class="image featured"><img src="images/pic04.jpg" alt="" /></span>
+									<span class="image featured"><img src="images/summer2021limslab.jpg" alt="" /></span>
 								</article>
 
 						</div>
