--- a/news.html
+++ b/news.html
@@ -71,6 +71,21 @@
 													<!-- Excerpt -->
 														<article class="box excerpt">
 															<header>
+																<span class="date">August 18, 2021</span>
+																<h3><a href="news.html">LimsLab FIRST NSFC Proposal Gets Promoted!</a></h3>
+															</header>
+															<p>We are SO excited to announce that LimsLab's FIRST NSFC Proposal was promoted to be funded today.
+															With the support of this very first funding program, LimsLab will devote to the "development of Integrated Protein Mass
+															Spectrometry Platform Towards Fast Omic Identification and Simultaneous Structural Interrogation of Living Cell-trapped Proteins".</p>
+															<span class="image featured"><img src="images/NSFC.jpg" alt="" /></span>
+														</article>
+
+												</li>
+												<li>
+
+													<!-- Excerpt -->
+														<article class="box excerpt">
+															<header>
 																<span class="date">October 2</span>
 																<h3><a href="news.html">LimsLab Group Site Gets Online!</a></h3>
 															</header>
