--- a/publication.html
+++ b/publication.html
@@ -74,7 +74,7 @@
 									</a> <strong><i>ChemRxiv</i></strong> Preprint. https://doi.org/10.26434/chemrxiv.13379957.v1 (<strong>*, co-corresponding</strong>)</br> 
 									[<i><strong><font color='red'>Lossless SMS: AIU/AIF IM-MS</font></strong></i>.]</p> 
 									
-									<p><strong>26</strong>. <strong>Gongyu Li</strong> Junfeng Huang, Zhen Zheng, Qinjingwen Cao, Yuwei Tian, Guangming Huang, Lingjun Li and Brandon Ruotolo*. 
+									<p><strong>26</strong>. <strong>Gongyu Li</strong>, Junfeng Huang, Zhen Zheng, Qinjingwen Cao, Yuwei Tian, Guangming Huang, Lingjun Li and Brandon Ruotolo*. 
 									<a href="https://pubs.acs.org/doi/abs/10.1021/jasms.0c00474">Bicarbonate Buffers Can Promote Crosslinking and Alternative Gas-phase Dissociation Pathways for Multiprotein Complexes.
 									</a> <strong><i> Int. J. Mass Spectrom. </i></strong> 2021, accepted. </p>
 									
